--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   <p>trial</p>
+  <a href="register.html">register here</a>
+  <a href="login.html">login here</a>
 </body>
 </html>
