--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
                 <div class="input-addon">
                     <i class="material-icons">face</i>
                 </div>
-                <input id="login" placeholder="login" type="text" required class="validate" autocomplete="off">
+                <input id="email" placeholder="email" type="text" required class="validate" autocomplete="off">
             </div>
 
             <div class="clearfix"></div>
